syntax = "proto3";
package Training;
enum Color {
    BLACK = 0;
    WHITE = 1;
}

enum Result {
    DRAW = 0;
    WHITE_WON = 1;
    BLACK_WON = 2;
    UNKNOWN = 3;
}

message Position {
    uint32 BP = 1;
    uint32 WP = 2;
    uint32 K = 3;
    Color mover = 4;
    Result result = 5;
}

message TrainData {
    repeated Position positions = 1;
}

